[package]
name = "music_man"
version = "0.1.0"
authors = ["swpark6 <sewon1234@naver.com>", "supernovel <ekfueh@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
google-youtube3 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"