[package]
name = "youtube_api"
version = "0.1.0"
authors = ["Park <ekfueh@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.10", features = [ "serde" ] }
tokio = { version = "0.2", features = ["full"] }
tokio-test = { version = "0.2.0" }